# N02_Network_Project

./: README.md
Client/: CMakeLists.txt  client_secret.json  main.cpp  token.json
Client/data/keylogger/: 58r2T10dez.txt  6k7nZP6VWD.txt  CLyFHa6WSz.txt  FDWNAxIBdC.txt  IXoTHCRljh.txt  sxRbwDI6qF.txt
Client/data/process/: running_process.txt
Client/data/video/: 20250804_093539.avi
Client/include/: UI.h  client.h  gmail.h
Client/src/: UI.cpp  client.cpp  gmail.cpp  token.json
Server/: CMakeLists.txt  main.cpp
Server/data/keylogger/: 5qAwWJsBHj.txt  WoXhHrPMYR.txt  acBbGhqiih.txt
Server/data/process/: running_process.txt
Server/include/: WebcamRecorder.h  command_handler.h  copyfile.h  keylogger.h  process_manager.h  screenshot.h  server.h
Server/lib/opencv/install/x64/mingw/lib/: OpenCVModules-release.cmake
Server/src/: PowerRelatedFunction.cpp  WebcamRecorder.cpp  command_handler.cpp  copyfile.cpp  keylogger.cpp  process_manager.cpp  screenshot.cpp  server.cpp
src/: PowerRelatedFunction.cpp  PowerRelatedFunction.h  command_handler.cpp  command_handler.h  copyfile.cpp  copyfile.h  gmail.cpp  keylogger.cpp  keylogger.h  process_manager.cpp  process_manager.h
